updated header and footer for sub pages

--- a/gallery.html
+++ b/gallery.html
@@ -44,12 +44,6 @@
         <div class="container-fluid header_top_container">
           <div class="contact_nav">
             <a href="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Call : +01 123455678990
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
                 Email : sgya.chelakkara@gmail.com
@@ -66,7 +60,7 @@
             <a href="https://www.facebook.com/ChelakkaraSGYA/">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/sgya_chelakkara/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -211,152 +205,101 @@
   <!-- end client section -->
 
 
-  <!-- info section -->
-  <section class="info_section ">
+ <!-- info section -->
+ <section class="info_section ">
 
-    <div class="container">
-      <div class="contact_nav">
-        <a href="">
-          <i class="fa fa-phone" aria-hidden="true"></i>
-          <span>
-            Call : +01 123455678990
-          </span>
-        </a>
-        <a href="">
-          <i class="fa fa-envelope" aria-hidden="true"></i>
-          <span>
-            Email : demo@gmail.com
-          </span>
-        </a>
-        <a href="">
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <span>
-            Location
-          </span>
-        </a>
-      </div>
+  <div class="container">
+    <div class="contact_nav">
 
-      <div class="info_top ">
-        <div class="row info_main_row">
-          <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="info_links">
-              <h4>
-                QUICK LINKS
-              </h4>
-              <div class="info_links_menu">
-                <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
-                <a class="" href="about.html"> About</a>
-                <a class="" href="activities.html">Activities</a>
-                <a class="" href="testimonial.html">Testimonial</a>
-                <a class="" href="contact.html">Contact Us</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 mx-auto">
-            <div class="info_post">
-              <h5>
-                INSTAGRAM FEEDS
-              </h5>
-              <div class="post_box">
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-                <div class="img-box">
-                  <img src="images/instagram.jpg" alt="">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info_form">
-              <h4>
-                SIGN UP TO OUR NEWSLETTER
-              </h4>
-              <form action="">
-                <input type="text" placeholder="Enter Your Email" />
-                <button type="submit">
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="info_bottom">
-        <div class="row">
-          <div class="col-md-2">
-            <div class="info_logo">
-              <a href="">
-                <img src="images/logo2.png" alt="">
-              </a>
-            </div>
-          </div>
-          <div class="col-md-4 ml-auto">
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
+      <a href="">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <span>
+          Email : sgya.chelakkara@gmail.com
+        </span>
+      </a>
+      <a href="https://goo.gl/maps/8v7WfZ9jH55arCWR7">
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <span>
+          Chelakkara,Thrissur,Kerala
+        </span>
+      </a>
+    </div>
+
+    <div class="info_top ">
+      <div class="row info_main_row">
+        <div class="col-sm-6 col-md-4 col-lg-3">
+          <div class="info_links">
+            <h4>
+              QUICK LINKS
+            </h4>
+            <div class="info_links_menu">
+              <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="" href="about.html"> About</a>
+              <a class="" href="activities.html">Project</a>
+              <a class="" href="gallery.html">Gallery</a>
+              <a class="" href="contact.html">Contact Us</a>
             </div>
           </div>
         </div>
 
+    <div class="info_bottom">
+      <div class="row">
+        <div class="col-md-2">
+          <div class="info_logo">
+            <a href="">
+              <img src="images/logo2.png" alt="">
+            </a>
+          </div>
+        </div>
+
+        
+        <div class="col-md-4 ml-auto">
+          <div class="social_box">
+            <a href="https://www.facebook.com/ChelakkaraSGYA/">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.instagram.com/sgya_chelakkara/">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
       </div>
+
     </div>
-  </section>
-  <!-- end info_section -->
+  </div>
+</section>
+<!-- end info_section -->
 
 
-  <!-- footer section -->
-  <section class="footer_section">
-    <div class="container">
-      <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
-      </p>
-    </div>
-  </section>
-  <!-- footer section -->
+<!-- footer section -->
+<footer class="footer_section">
+  <div class="container">
+    <p>
+      &copy; <span id="displayYear"></span> All Rights Reserved By
+      <a> St George Youth Association Chelakkara </a>
+    </p>
+  </div>
+</footer>
+<!-- footer section -->
 
-  <!-- jQery -->
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <!-- popper js -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <!-- bootstrap js -->
-  <script type="text/javascript" src="js/bootstrap.js"></script>
-  <!-- owl slider -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <!--  OwlCarousel 2 - Filter -->
-  <script src="https://huynhhuynh.github.io/owlcarousel2-filter/dist/owlcarousel2-filter.min.js"></script>
-  <!-- custom js -->
-  <script type="text/javascript" src="js/custom.js"></script>
-  <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
+<!-- jQery -->
+<script src="js/jquery-3.4.1.min.js"></script>
+<!-- popper js -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+</script>
+<!-- bootstrap js -->
+<script src="js/bootstrap.js"></script>
+<!-- owl slider -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+</script>
+<!--  OwlCarousel 2 - Filter -->
+<script src="https://huynhhuynh.github.io/owlcarousel2-filter/dist/owlcarousel2-filter.min.js"></script>
+<!-- custom js -->
+<script src="js/custom.js"></script>
+<!-- Google Map -->
+<script src="https://goo.gl/maps/LU7zm7fEq9LDDkj19">
+</script>
+<!-- End Google Map -->
 
 </body>
 
