--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
         <div class="container-fluid header_top_container">
           <div class="contact_nav">
             <a href="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Call : +01 123455678990
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
                 Email : sgya.chelakkara@gmail.com
@@ -446,7 +440,7 @@
         </div> 
         <div class="img-box">
           <div class="img-box">
-            <img src="images/shibin.jpg" alt=""  width="150" height="150">
+            <img src="images/sibin.jpg" alt=""  width="150" height="150">
           </div>
           <div class="detail-box">
             <h5>
