removed contact page

--- a/index.html
+++ b/index.html
@@ -91,9 +91,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
               </ul>
             </div>
           </nav>
@@ -119,26 +116,6 @@
                     <div class="btn-box">
                       <a href="about.html" class="btn2">
                         About Us
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-10 mx-auto">
-                  <div class="detail-box">
-                    <h1>
-                      ST.GEORGE <br>
-                      YOUTH ASSOCIATION <br>
-                      CHELAKKARA
-                    </h1>
-                    <div class="btn-box">
-                      <a href="contact.html" class="btn1">
-                        Contact Us
                       </a>
                     </div>
                   </div>
@@ -489,9 +466,8 @@
               <div class="info_links_menu">
                 <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                 <a class="" href="about.html"> About</a>
-                <a class="" href="activities.html">Project</a>
+                <a class="" href="activities.html">Activities</a>
                 <a class="" href="gallery.html">Gallery</a>
-                <a class="" href="contact.html">Contact Us</a>
               </div>
             </div>
           </div>
