--- a/gallery.html
+++ b/gallery.html
@@ -92,9 +92,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
-                </li>
               </ul>
             </div>
           </nav>
@@ -235,9 +232,8 @@
             <div class="info_links_menu">
               <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
               <a class="" href="about.html"> About</a>
-              <a class="" href="activities.html">Project</a>
+              <a class="" href="activities.html">Activities</a>
               <a class="" href="gallery.html">Gallery</a>
-              <a class="" href="contact.html">Contact Us</a>
             </div>
           </div>
         </div>
