--- a/activities.html
+++ b/activities.html
@@ -101,78 +101,92 @@
   </div>
 
 
-  <!-- activities section -->
+ <!-- Activity section -->
 
-  <section class="project_section layout_padding">
-    <div class="container">
-      <div class="heading_container">
-        <h2>
-          Activities
-        </h2>
+ <section class="project_section layout_padding">
+  <div class="container">
+    <div class="heading_container">
+      <h2>
+        Activities
+      </h2>
+    </div>
+    <div class="carousel-wrap ">
+      <div class="filter_box">
+        <h6>
+          Category
+        </h6>
+        <nav class="owl-filter-bar">
+          <a href="#" class="item active" data-owl-filter="*">All</a>
+          <a href="#" class="item" data-owl-filter=".charity">Charity</a>
+          <a href="#" class="item" data-owl-filter=".sports">Sports </a>
+          <a href="#" class="item" data-owl-filter=".social">Social </a>
+        </nav>
       </div>
-      <div class="carousel-wrap ">
-        <div class="filter_box">
-          <h6>
-            Category filter
-          </h6>
-          <nav class="owl-filter-bar">
-            <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".charity">Charity</a>
-            <a href="#" class="item" data-owl-filter=".sports">Sports </a>
-            <a href="#" class="item" data-owl-filter=".social">Social </a>
-          </nav>
-        </div>
 
-        <div class="owl-carousel project_carousel">
-          <div class="item charity">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/book_1.jpg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>
-                  പുസ്തക വിതരണം
-                </h5>
-                <p>
-                  സെൻ്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷൻ കഴിഞ്ഞ കുറെ വർഷങ്ങളായി നിർധനരായ വിദ്യാർഥികൾക്ക് പഠനോപകരണങ്ങൾ വിതരണം ചെയ്യുന്നു
-                </p>
-              </div>
+      <div class="owl-carousel project_carousel">
+        <div class="item charity">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/book-final.jpg" alt="" />
+            </div>
+            <div class="detail-box">
+              <h5>
+                പുസ്തക വിതരണം
+              </h5>
+              <p>
+                സെന്റ് ജോർജ് യൂത്ത് അസോസിയേഷൻ (എസ്.ജി.വൈ.എ) എല്ലാ വർഷവും പാവപ്പെട്ട വിദ്യാർത്ഥികൾക്ക് പഠനോപകരണങ്ങൾ നൽകുന്നതിന് പ്രതിജ്ഞാബദ്ധരാണ്. സാമ്പത്തിക പരിമിതികൾ കാരണം ഒരു വിദ്യാർത്ഥിയും പിന്നിലല്ലെന്ന് എസ്.ജി.വൈ.എ ഉറപ്പാക്കുന്നു. എല്ലാ വർഷവും ഞങ്ങൾ അർഹരായ വിദ്യാർത്ഥികൾക്ക് പാഠപുസ്തകങ്ങൾ, നോട്ട്ബുക്കുകൾ, സ്റ്റേഷനറി എന്നിവ സംഭാവന ചെയ്യുന്നു, ഇത് അവരുടെ വിദ്യാഭ്യാസ ലക്ഷ്യങ്ങൾ പിന്തുടരാൻ അവരെ ശാക്തീകരിക്കുന്നു. 
+              </p>
+            </div>
+          </div> 
+          <div class="box">
+            <div class="img-box">
+              <img src="images/dia.jpg" alt="" />
+            </div>
+            <div class="detail-box">
+              <h5>
+                ഡയലിസിസ് രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി
+              </h5>
+              <p>
+                ചേലക്കര സെന്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷന്റെ ചാരിറ്റി പ്രവർത്തനങ്ങളുടെ ഭാഗമായി , യാക്കോബായ സുറിയാനി സഭയുടെ പെരുമ്പാവൂരിൽ പ്രവർത്തിച്ചുവരുന്ന കൊയ്നോണിയ മിഷൻ ഹോസ്പിറ്റലിന്റെ എൽദോ മോർ ബസേലിയോസ് ഡയാലിസിസ് സെന്ററിലെ രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി. ഇടവക വികാരി ഫാ. കുരിയാക്കോസ് വൈദ്യൻ പറമ്പിൽ  അങ്കമാലി ഭദ്രാസനം,പെരുമ്പാവൂർ മേഖല മെത്രാപ്പോലീത്ത അഭിവന്ദ്യ മാത്യുസ് മോർ അപ്രേം മെത്രാപ്പോലീത്തക്ക്  ഡയലിസിസ് രോഗികൾക്കുള്ള തുക കൈമാറി.
+
+              </p>
+            </div>
+          </div>                       
+        </div>
+        <div class="item sports">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/sports_2.jpg" alt="" />
+            </div>
+            <div class="detail-box">
+              <h5>
+                സ്പോർട്സ്
+              </h5>
+              <p>
+                മേഖല തലത്തിലും ഭദ്രാസന തലത്തിലും വർഷംതോറും നടത്തപ്പെടുന്ന ക്രിക്കറ്റ് , ഫുട്ബോൾ, ബാറ്റ്മിന്റൺ ടൂർണമെന്റുകളിൽ സജീവമായി പങ്കെടുക്കാനും, അവയിൽ പലതിലും ചാമ്പ്യൻമാരാവാനും ടെവകൃപയാൽ സാധിച്ചു.
+              </p>
             </div>
           </div>
-          <div class="item sports">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/sports_2.jpg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>
-                  സ്പോർട്സ്
-                </h5>
-                <p>
-                  ചേലക്കര മേഖല തലത്തിൽ കഴിഞ്ഞ വർഷം സംഘടിപ്പിച്ച ക്രിക്കറ്റ്, ഫുട്ബോൾ ടൂർണമെൻ്റിൽ  വിജയികളവൻ സാധിച്ച. 
-                </p>
-              </div>
+        </div>
+        <div class="item social">
+          <div class="box">
+            <div class="img-box">
+              <img src="images/env_2.jpg" alt="" />
             </div>
-          </div>
-          <div class="item social">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/env_2.jpg" alt="" />
-              </div>
-              <div class="detail-box">
-                <h5>
-                  പരിസ്ഥിതി ദിനം
-                </h5>
-                <p>
-                  പരിസ്ഥിതി ദിനത്തോടനുബന്ധിച്ച് പള്ളി അങ്കണത്തിൽ വൃക്ഷ തൈകൾ നട്ടു.
-                </p>
-              </div>
+            <div class="detail-box">
+              <h5>
+                പരിസ്ഥിതി ദിനം
+              </h5>
+              <p>
+                നാളത്തെ തലമുറക്കായി നമ്മുടെ പരിസ്ഥിതിയെ സംരക്ഷിക്കേണ്ടത് തികച്ചും അത്യന്താപേക്ഷിതമാണ് . അതിനു നേതൃത്വം നൽകി സമൂഹത്തിനു നല്ലരു സന്ദേശം നൽകാൻ ഞങ്ങൾ യുവാക്കൾ പ്രതിജ്ഞാബദ്ധരാണ് .
+              </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- end activity section -->
 
