--- a/index.html
+++ b/index.html
@@ -168,8 +168,6 @@
           <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
           <li data-target="#customCarousel1" data-slide-to="1"></li>
           <li data-target="#customCarousel1" data-slide-to="2"></li>
-          <li data-target="#customCarousel1" data-slide-to="3"></li>
-          <li data-target="#customCarousel1" data-slide-to="4"></li>
         </ol>
       </div>
 
@@ -212,7 +210,7 @@
 
 
 
-  <!-- Service section -->
+  <!-- Activity section -->
 
   <section class="project_section layout_padding">
     <div class="container">
@@ -258,7 +256,7 @@
                   ഡയലിസിസ് രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി
                 </h5>
                 <p>
-                  ചേലക്കര സെന്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷന്റെ ചാരിറ്റി പ്രവർത്തനങ്ങളുടെ ഭാഗമായി , യാക്കോബായ സുറിയാനി സഭയുടെ പെരുമ്പാവൂരിൽ പ്രവർത്തിച്ചുവരുന്ന കൊയ്നോണിയ മിഷൻ ഹോസ്പിറ്റലിന്റെ എൽദോ മോർ ബസേലിയോസ് ഡയാലിസിസ് സെന്ററിലെ രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി. ഇടവക വികാരി ഫാ. കുരിയാക്കോസ് വൈദ്യൻ പറമ്പിൽ  അങ്കമാലി ഭദ്രാസനം,പെരുമ്പാവൂർ മേഖല മെത്രാപ്പോലീത്ത അഭിവന്ദ്യ മാത്യുസ് മോർ അപ്രേം മെത്രാപ്പോലീത്തക്ക്  ഡയലിസിസ് രോഗികൾക്കുള്ള തുക കൈമാറി.
+                  ചേലക്കര സെന്റ് ജോർജ്ജ് യൂത്ത് അസോസിയേഷന്റെ ചാരിറ്റി പ്രവർത്തനങ്ങളുടെ ഭാഗമായി , യാക്കോബായ സുറിയാനി സഭയുടെ പെരുമ്പാവൂരിൽ പ്രവർത്തിച്ചുവരുന്ന കൊയ്നോണിയ മിഷൻ ഹോസ്പിറ്റലിന്റെ എൽദോ മോർ ബസേലിയോസ് ഡയാലിസിസ് സെന്ററിലെ രോഗികൾക്ക് കൈതാങ്ങായി ധനസഹായം നൽകി. ഇടവക വികാരി ഫാ. കുരിയാക്കോസ് വൈദ്യൻ പറമ്പിൽ  അങ്കമാലി ഭദ്രാസനം,പെരുമ്പാവൂർ മേഖല മെത്രാപ്പോലീത്ത അഭിവന്ദ്യ മാത്യുസ് മോർ അപ്രേം മെത്രാപ്പോലീത്തക്ക്  ഡയലിസിസ് രോഗികൾക്കുള്ള തുക കൈമാറി.
  
                 </p>
               </div>
