--- a/activities.html
+++ b/activities.html
@@ -181,6 +181,19 @@
                 നാളത്തെ തലമുറക്കായി നമ്മുടെ പരിസ്ഥിതിയെ സംരക്ഷിക്കേണ്ടത് തികച്ചും അത്യന്താപേക്ഷിതമാണ് . അതിനു നേതൃത്വം നൽകി സമൂഹത്തിനു നല്ലരു സന്ദേശം നൽകാൻ ഞങ്ങൾ യുവാക്കൾ പ്രതിജ്ഞാബദ്ധരാണ് .
               </p>
             </div>
+            <div class="box">
+              <div class="img-box">
+                <img src="images/aug_1.jpg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>
+                  സ്വാതന്ത്ര്യ ദിനം ആഘോഷിച്ചു 
+                </h5>
+                <p>
+                  യൂത്ത് അസോസിയേഷന്റെ നേതൃത്വത്തിൽ ഇന്ത്യയുടെ 76ാം സ്വാതന്ത്ര്യ ദിനം സമുചിതമായി ആഘോഷിച്ചു.വികാരി ഫാദർ കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ അധ്യക്ഷത വഹിച്ചു. ജാതി മത വര്‍ഗ വര്‍ണ വിവേചനം ഇല്ലാത്ത പുതിയ ഇന്ത്യക്കായി പരിശ്രമിക്കണമെന്ന് സ്വാതന്ത്ര്യദിന സന്ദേശത്തില്‍ വ്യക്തമാക്കി.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
