--- a/gallery.html
+++ b/gallery.html
@@ -115,9 +115,10 @@
         <div class="carousel-item active">
           <div class="container">
             <div class="row">
-              <div class="col-md-10 mx-auto">
-                    <img src="images/lino.jpg" alt="gallery"  width="350" height="250" style="display: flex; justify-content: center; align-items: center; margin: 0;" >
-              </div>
+              <div class="image-container">
+                <img src="images/aug_2.jpg" alt="സ്വാതന്ത്ര്യ ദിനം 2023" />
+              <div class="description">സ്വാതന്ത്ര്യ ദിനം 2023.</div>
+            </div>
             </div>
           </div>
         </div>
