--- a/index.html
+++ b/index.html
@@ -291,6 +291,19 @@
                 </p>
               </div>
             </div>
+            <div class="box">
+              <div class="img-box">
+                <img src="images/aug_1.jpg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>
+                  സ്വാതന്ത്ര്യ ദിനം ആഘോഷിച്ചു 
+                </h5>
+                <p>
+                  യൂത്ത് അസോസിയേഷന്റെ നേതൃത്വത്തിൽ ഇന്ത്യയുടെ 76ാം സ്വാതന്ത്ര്യ ദിനം സമുചിതമായി ആഘോഷിച്ചു.വികാരി ഫാദർ കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ അധ്യക്ഷത വഹിച്ചു. ജാതി മത വര്‍ഗ വര്‍ണ വിവേചനം ഇല്ലാത്ത പുതിയ ഇന്ത്യക്കായി പരിശ്രമിക്കണമെന്ന് സ്വാതന്ത്ര്യദിന സന്ദേശത്തില്‍ വ്യക്തമാക്കി.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
