--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
           <div class="container">
             <div class="row">
               <div class="image-container">
-                <img src="images/aug_2.jpg" alt="സ്വാതന്ത്ര്യ ദിനം 2023" />
+                <img src="images/aug-2.jpg" alt="സ്വാതന്ത്ര്യ ദിനം 2023" />
               <div class="description">സ്വാതന്ത്ര്യ ദിനം 2023.</div>
             </div>
             </div>
