--- a/gallery.html
+++ b/gallery.html
@@ -103,17 +103,47 @@
 
   <!-- client section -->
   <section class="client_section layout_padding">
-    <div class="scroll-container">
-      <img src="images/aug_1.jpg" alt="Cinque Terre" width="400" height="300">
-      <img src="images/Aug-2.jpg" alt="Forest" width="400" height="300">
-      <img src="images/book_1.jpg" alt="Northern Lights" width="400" height="300">
-      <img src="images/book_2.jpg" alt="Mountains" width="400" height="300">
-      <img src="images/env_2.jpg" alt="Mountains" width="400" height="300">
-      <img src="images/env_3.jpg" alt="Mountains" width="400" height="300">
-      <img src="images/peru_1.jpg" alt="Mountains" width="400" height="300">
-      <img src="images/peru2.jpg" alt="Mountains" width="400" height="300">
-      <img src="images/peru3.jpg" alt="Mountains" width="400" height="300">
-      <img src="images/peru4.jpg" alt="Mountains" width="400" height="300">
+    <div class="scroll-container_1">
+      <div class="image-container">
+        <img src="images/aug_1.jpg" alt="Independence Day 2023" width="350" height="250" class="image_1">
+        <div class="overlay">Independence Day 2023</div>
+    </div>
+    <div class="image-container">
+        <img src="images/Aug-2.jpg" alt="Independence Day 2023" width="350" height="250" class="image_1">
+        <div class="overlay">Independence Day 2023</div>
+    </div>
+    <div class="image-container">
+        <img src="images/book_1.jpg" alt="Book Donation 2023" width="350" height="250" class="image_1">
+        <div class="overlay">Book Donation 2023</div>
+    </div>
+    <div class="image-container">
+        <img src="images/book_2.jpg" alt="Book Donation 2023" width="350" height="250" class="image_1">
+        <div class="overlay">Book Donation 2023</div>
+    </div>
+    <div class="image-container">
+        <img src="images/env_2.jpg" alt="Environmental Day 2023" width="350" height="250" class="image_1">
+        <div class="overlay">Environmental Day 2023</div>
+    </div>
+    <div class="image-container">
+        <img src="images/env_3.jpg" alt="Environmental Day 2023" width="350" height="250" class="image_1">
+        <div class="overlay">Environmental Day 2023</div>
+    </div>
+    <div class="image-container">
+        <img src="images/peru_1.jpg" alt="Perunnal 2024" width="350" height="250" class="image_1">
+        <div class="overlay">Perunnal 2024</div>
+    </div>
+    <div class="image-container">
+        <img src="images/peru2.jpg" alt="Perunnal 2024" width="350" height="250" class="image_1">
+        <div class="overlay">Perunnal 2024</div>
+    </div>
+    <div class="image-container">
+        <img src="images/peru3.jpg" alt="Perunnal 2024" width="350" height="250" class="image_1">
+        <div class="overlay">Perunnal 2024</div>
+    </div>
+    <div class="image-container">
+        <img src="images/peru4.jpg" alt="Perunnal 2024" width="350" height="250" class="image_1">
+        <div class="overlay">Perunnal 2024</div>
+    </div>
     </div>
   </section>
   
