--- a/index.html
+++ b/index.html
@@ -318,125 +318,143 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          Managing Comittee 2023-24
+          MANAGING COMITTE<br>2024-25
         </h2>
       </div>
       <div class="why_us_container">
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/achan.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ഫാ. കുര്യാക്കോസ് വൈദ്യൻപറമ്പിൽ 
-            <h6>
-              പ്രസിഡന്റ് 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/achan.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                ഫാ. കുര്യാക്കോസ് <br> വൈദ്യൻപറമ്പിൽ 
+              <h6>
+                പ്രസിഡന്റ് 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/shibin.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ഷിബിൻ ഷാന്റി 
-            <h6>
-              സെക്രട്ടറി 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/shibin.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                   ഷിബിൻ <br>ഷാന്റി 
+              <h6>
+                സെക്രട്ടറി 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/sijin.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              സിജിൻ കെ ജോർജ്ജ് 
-            <h6>
-              വൈസ് പ്രസിഡന്റ് 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/sijin.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                സിജിൻ കെ <br> ജോർജ്ജ് 
+              <h6>
+                വൈസ് പ്രസിഡന്റ് 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/gidel.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ഗീഥേൽ ജിജു 
-            <h6>
-              ജോ.സെക്രട്ടറി 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/gidel.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                ഗീഥേൽ <br>ജിജു 
+              <h6>
+                ജോ.സെക്രട്ടറി 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/ruth.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              രൂത്ത് വിൽ‌സൺ 
-            <h6>
-              ജോ.സെക്രട്ടറി 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/ruth.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                രൂത്ത് <br>വിൽ‌സൺ 
+              <h6>
+                ജോ.സെക്രട്ടറി 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/eldho.jpg" alt="" width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              എൽദോ ചാർളി
-            <h6>
-              ട്രഷറർ  
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/eldho.jpg" alt="" width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                എൽദോ<br> ചാർളി
+              <h6>
+                ട്രഷറർ  
+              </h6>
+              </h5>
+            </div>
           </div>
         </div> 
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/lino.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ലിനോ വിൽ‌സൺ  
-            <h6>
-              ഭദ്രാസന പ്രതിനിധി 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/lino.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                ലിനോ<br> വിൽ‌സൺ  
+              <h6>
+                ഭദ്രാസന പ്രതിനിധി 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>
-        <div class="img-box">
+        <div class="image">
           <div class="img-box">
-            <img src="images/godwin.JPG" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              ഗോഡ്‌വിൻ പുലിക്കോട്ടിൽ 
-            <h6>
-              ചാരിറ്റി കോർഡിനേറ്റർ  
-            </h6>
-            </h5>
-          </div>
-        </div> 
-        <div class="img-box">
+            <div class="img-box">
+              <img src="images/godwin.JPG" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                ഗോഡ്‌വിൻ <br>പുലിക്കോട്ടിൽ 
+              <h6>
+                ചാരിറ്റി കോർഡിനേറ്റർ  
+              </h6>
+              </h5>
+            </div>
+          </div> 
+        </div>
+        <div class="image">
           <div class="img-box">
-            <img src="images/sibin.jpg" alt=""  width="150" height="150">
-          </div>
-          <div class="detail-box">
-            <h5>
-              സിബിൻ സി ബെന്നി 
-            <h6>
-              സ്പോർട്സ് കോർഡിനേറ്റർ 
-            </h6>
-            </h5>
+            <div class="img-box">
+              <img src="images/sibin.jpg" alt=""  width="150" height="150">
+            </div>
+            <div class="detail-box">
+              <h5>
+                സിബിൻ <br>സി ബെന്നി 
+              <h6>
+                സ്പോർട്സ് കോർഡിനേറ്റർ 
+              </h6>
+              </h5>
+            </div>
           </div>
         </div>      
       </div>
