updated home page

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           MANAGING COMITTE<br>2024-25
         </h2>
       </div>
-      <div class="why_us_container">
+      <div class="image-container_1">
         <div class="image">
           <div class="img-box">
             <div class="img-box">
