updated home page

--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ST.GEORGE <br>
-                      YOUTH ASSOCIATION <br>
-                      CHELAKKARA
+                      <br>
+                      <br>
+                      സെന്റ് ജോർജ്ജ് <br>
+                      യൂത്ത് അസോസിയേഷൻ<br>
+                      ചേലക്കര
                     </h1>
                     <div class="btn-box">
                       <a href="about.html" class="btn2">
@@ -129,9 +131,11 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ST.GEORGE <br>
-                      YOUTH ASSOCIATION <br>
-                      CHELAKKARA
+                      <br>
+                      <br>
+                      സെന്റ് ജോർജ്ജ് <br>
+                      യൂത്ത് അസോസിയേഷൻ<br>
+                      ചേലക്കര
                     </h1>
                     <div class="btn-box">
                       <a href="gallery.html" class="btn1">
@@ -149,9 +153,11 @@
                 <div class="col-md-10 mx-auto">
                   <div class="detail-box">
                     <h1>
-                      ST.GEORGE <br>
-                      YOUTH ASSOCIATION <br>
-                      CHELAKKARA
+                      <br>
+                      <br>
+                      സെന്റ് ജോർജ്ജ് <br>
+                      യൂത്ത് അസോസിയേഷൻ<br>
+                      ചേലക്കരA
                     </h1>
                     <div class="btn-box">
                       <a href="activities.html" class="btn1">
@@ -184,7 +190,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                St.ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര 
+                <br>സെന്റ് ജോർജ്ജ്  യൂത്ത് അസോസിയേഷൻ ചേലക്കര 
               </h2>
             </div>
             <p>
