updated website partne

--- a/gallery.html
+++ b/gallery.html
@@ -215,16 +215,18 @@
 <!-- end info_section -->
 
 
-<!-- footer section -->
-<footer class="footer_section">
-  <div class="container">
-    <p>
-      &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a> St George Youth Association Chelakkara </a>
-    </p>
-  </div>
-</footer>
-<!-- footer section -->
+  <!-- footer section -->
+  <footer class="footer_section">
+    <div class="container">
+      <p>
+        &copy; <span id="displayYear"></span> COPYRIGHT
+        <a> <b>St George Youth Association Chelakkara</b> </a> 
+        <br>
+        <a> WEBSITE &nbsp;&nbsp;&nbsp; <b>Cloud3 Innovative Solutions </b> </a>
+      </p>
+    </div>
+  </footer>
+  <!-- footer section -->
 
 <!-- jQery -->
 <script src="js/jquery-3.4.1.min.js"></script>
