--- a/index.html
+++ b/index.html
@@ -539,8 +539,10 @@
   <footer class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a> St George Youth Association Chelakkara </a>
+        &copy; <span id="displayYear"></span> COPYRIGHT
+        <a> <b>St George Youth Association Chelakkara</b> </a> 
+        <br>
+        <a> WEBSITE &nbsp;&nbsp;&nbsp; <b>Cloud3 Innovative Solutions </b> </a>
       </p>
     </div>
   </footer>
