updated website icon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
+  <link rel="shortcut icon" type="x-icon" href="images/logo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -232,9 +233,9 @@
           </h6>
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".charity">Charity</a>
             <a href="#" class="item" data-owl-filter=".sports">Sports </a>
             <a href="#" class="item" data-owl-filter=".social">Social </a>
+            <a href="#" class="item" data-owl-filter=".charity">Charity</a>
           </nav>
         </div>
 
