updated website favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
-  <link rel="shortcut icon" type="x-icon" href="images/logo.png">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
